# flow_payments

./: Cargo.toml  README.md  dfx.json  did.sh  package-lock.json  package.json
src/flow_chain_backend/: Cargo.toml  flow_chain_backend.did
src/flow_chain_backend/src/: lib.rs  models.rs
src/flow_chain_frontend/: index.html  package.json  tailwind.config.js  tsconfig.json
src/flow_chain_frontend/src/: App.jsx  index.css  main.jsx
src/flow_chain_frontend/src/assets/images/: index.jsx
src/flow_chain_frontend/src/components/: Contact.jsx  ContactForm.jsx  DeliveryServices.jsx  Features.jsx  Footer.jsx  GetInTouchModal.jsx  Hero.jsx  LoginModal.jsx  Navbar.jsx  Partners.jsx  Services.jsx  Wallet.jsx
src/flow_chain_frontend/src/components/dashboard/: DashboardHeader.jsx  DashboardLayout.jsx  DriversStatus.jsx  MonthlyChart.jsx  OperationsCard.jsx  OrdersStatus.jsx  PopularCategories.jsx  ProductsTable.jsx  RecentDrivers.jsx  RecentOrdersList.jsx  SalesOverview.jsx
src/flow_chain_frontend/src/components/driver/: activeOrders.jsx
src/flow_chain_frontend/src/components/forms/: DriverRegistrationForm.jsx  SupplierRegistrationForm.jsx
src/flow_chain_frontend/src/components/modals/: QuotationModal.jsx
src/flow_chain_frontend/src/components/tables/: ClientItemsTable.tsx  ClientOrdersTable.tsx  (+3 more)
src/flow_chain_frontend/src/pages/: About.jsx  Home.jsx  Services.jsx
src/flow_chain_frontend/src/utils/: auth.js  canisterFactory.js  clientCompany.js  driver.js  icp.js  icrc2_ledger.js  items.js  ledger.js  orders.js  quatation.js  supplyCompany.js  warehouse.js
(+28 files in other folders)
