[package]
name = "flow_chain_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.6"
ic-cdk = "0.12.0"
# ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.5.6"
validator = { version = "0.15", features = ["derive"] }
ic-cdk-timers = "0.9.0"

[dev-dependencies]
pocket-ic = "6.0.0"
